src/Traffk.Portal/wwwroot/css/styles.css
/* ... */
@media (max-width: 767px) {
    #desktop-menu {
        display: none !important;
    }

    #mobile-menu {
        position: absolute;
        top: 60px;
        left: -15px;
        background: #FFFFFF;
        width: 100%;
        padding-left: 0;
        list-style-type: none;
        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
    }

    #mobile-menu li {
        padding: 12px 15px;
    }

        #mobile-menu li ul {
            display: none;
            padding-left: 0;
            position: relative;
            left: -15px;
            margin-top: 5px;
        }

        #mobile-menu li ul li {
            border-bottom: none;
            list-style-type: none;
            border-bottom: 1px solid #fff;
            padding: 0;
        }

        #mobile-menu li ul li:last-child {
            border-bottom: none;
        }

        #mobile-menu li ul li:last-child a {
            padding-bottom: 0;
        }

        #mobile-menu li ul li a {
            cursor: pointer;
            font-size: .9em;
            display: block;
            padding: 12px 0 12px 30px;
            list-style-type: none;
        }

        /*#mobile-menu li ul li a:before {
            content: "» ";
        }*/

	.navbar-right {
	  display: none;
	}
	.mobile-block-centered {
	  float: none !important;
	  display: block !important;
	  margin: 10px auto !important;
	  width: auto !important;
	  max-width: 100% !important;
	  text-align: center !important;
	}
	#page-wrapper, .popup {
	  font-size: 16px;
	}
	.large-padding, .medium-padding, .small-padding {
	  padding: 20px;
	}
	.form-text {
	  width: 100% !important;
	}
	.panel {
	  min-height: 0;
	}
   .navbar {
	  background-image: none;
	}
	.dropdown-menu {
	  padding-bottom: 0;
	}
	.dropdown-menu li {
	  display: inline-block;
	  width: 49%;
	}
	#primary-subnav .dropdown-menu li a {
	  padding: 15px 0 15px 25px;
	  width: 100%;
	  max-width: 100%;
	  font-size: 14px;
	  border-bottom: 1px solid #eee;
	}
	#primary-subnav .dropdown-menu li a:nth-child(odd) {
	  border-right: 1px solid #eee;
	}
    #primary-subnav-logo {
        position: absolute;
        top: 0;
    }
	.navbar-right {

	}
	.navbar-right > li > a {
	  padding: 0 13px;
	}
	body {
	  margin-top: 40px;
	}
	#page-wrapper .row {
	  margin-bottom: 18px;
	}
	h1 {
	  margin-top: 0;
	}
	form .form-row:last-child{
	  margin-bottom: 0;
	}
	.bar {
	  width: auto;
	  max-width: 100%;
	}
	.dropdown-menu li {
	  display: block;
	  width: 100%;
	}
	.dropdown-menu > li > a {
	  padding-top: 6px;
	  padding-bottom: 6px;
	}
	.message-preview a {
	  padding: 10px !important;
	}
	.message-preview .media-object {
	  margin: 0 auto;
	  width: 75%;
	}
	.step-indicator {
	  margin-bottom: 85px;
	}
	.step-indicator li {
	  display: inline-block;
	}
	.step-indicator .step-description {
	  position: absolute;
	  left: 45px;
	  top: 65px;
	}
	.btn-large {
	  display: block;
	  width: 100%;
	  padding: 10px 0;
	}
	.step-buttons {
	  margin-top: 30px;
	}
	.step-buttons li {
	  display: block;
	  width: 100%;
	  max-width: 100%;
	  margin-left: 0;
	}
	.step-buttons li a {
	  max-width: 100%;
	}
	.floated-filter {
	  width: 100% !important;
	  position: relative;
	  margin-top: 1px;
	  box-shadow: none;
	  border-radius: 0 !important;
	}
	.floated-filter.list-right {
	  right: 0;
	}
	.mini-panel {
	  margin-bottom: 10px;
	}
	.navbar-toggle {
	  margin: 12px 12px 0 0;
	  background: #000;
	}
    .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
        border-color: transparent;
        background-color: transparent;
    }
	.step-buttons li {
	  float: none !important;
	}
	.step-buttons li a {
	  margin-top: 6px;
	}
	#back-to-top {
	  box-shadow: 1px 1.5px 2.5px rgba(0, 0, 0, 0.15);
	  bottom: 20px;
	  right: 20px;
	}
	.inline-form {
	  width: 100% !important;
	}
	.inline-form .col-md-6 {
	  margin-bottom: 10px;
	}
	.inline-form .form-row {
	  margin-bottom: 10px;
	  width: 100% !important;
	}
	.inline-form label, .inline-form input {
	  width: 100% !important;
	}
	#personal-edit-form-container {
	  padding-left: 0;
	  padding-right: 0;
	}
	#footer-menu li {
	  display: block;
	}
	#footer-menu li a {
	  padding: 10px 0;
	  font-size: 14px;
	}
	#personal-page-img {
	  max-width: 175px !important;
	}
	.mini-panel-top, .mini-panel-top label, .img-responsive {
	  max-width: 100% !important;
	  width: 100% !important;
	}
	.filter-tags li a {
	  display: inline-block;
	  width: auto;
	  margin-bottom: 5px;
	}
	.table-controls li {
	  margin-bottom: 6px;
	}
	.table-controls li:last-child {
	  margin-bottom: 0;
	}
    	form .form-row:last-child {
	  margin-bottom: 10px;
	}
	input[type="radio"] {
	  width: auto !important;
	}
	label {
	  width: auto !important;
	  display: inline !important;
	}
	.form-label-inline {
	  text-align: left;
	}
	.form-control {
	  width: 100% !important;
	}
	.section-toggle .fa {
	  position: relative;
	  top: 2px;
	}
}

